docs/version-1.30/modules/en/pages/howtos/vap-migration.adoc
include::partial$variables.adoc[]
= ValidatingAdmissionPolicy migration
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-10-10
:page-revdate: {revdate}
:description: Discusses how to migrate from Kubernetes VAP policies to {project-name}.
:doc-persona: ["kubewarden-user", "kubewarden-operator", "kubewarden-distributor", "kubewarden-integrator"]
:doc-topic: ["vap-migration"]
:doc-type: ["howto"]
:doctype: book
:keywords: ["{project-name}", "kubewarden", "kubernetes", "cel", "vap", "validatingadmissionpolicy"]
:current-version: {page-origin-branch}

Starting from Kubernetes v1.26, the https://kubernetes.io/docs/reference/access-authn-authz/validating-admission-policy/[ValidatingAdmissionPolicy]
provides a way to write custom admission policies in Kubernetes. The policies are
written with the https://cel.dev/[Common Expression Language (CEL)], extended with
some https://kubernetes.io/docs/reference/using-api/cel/[Kubernetes-specific extensions].
ValidatingAdmissionPolicy reached stability in Kubernetes v1.30.

{project-name} provides a CEL policy that is capable of running Kubernetes VAP policies without any modifications.
You can read more about the CEL policy in xref:../tutorials/writing-policies/CEL/01-intro-cel.adoc[this section] of {short-project-name}'s documentation.
xref:tutorials/writing-policies/CEL/01-intro-cel.adoc#_benefits_of_kubewardens_cel_policy_in_comparison_with_validatingadmissionpolicies[This paragraph]
explains the benefits of running VAP policies using {short-project-name}.

This guide explains how to use the `kwctl` tool to migrate a VAP policy to {short-project-name}.

== Migration steps

[NOTE]
====
You must use `kwctl` version 1.14.0 or later to follow this guide.
====


Given a file containing this YAML definition of a `ValidatingAdmissionPolicy`:

.`ValidatingAdmissionPolicy` definition
[%collapsible]
======
[subs="+attributes",yaml]
----
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "force-liveness-probe"
spec:
  failurePolicy: Fail
  variables:
    - name: containers_without_liveness_probe
      expression: |
        object.spec.template.spec.containers.filter(c, !has(c.livenessProbe)).map(c, c.name)
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
  validations:
    - expression: |
        size(variables.containers_without_liveness_probe) == 0
      messageExpression: |
        'These containers are missing a liveness probe: ' + variables.containers_without_liveness_probe.join(' ')
      reason: Invalid
----
======

And a file containing the `ValidatingAdmissionPolicyBinding` resource:

.`ValidatingAdmissionPolicyBinding` definition
[%collapsible]
======
[subs="+attributes",shell]
----
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "kw-scaffold-demo"
spec:
  policyName: "force-liveness-probe"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        docs.kubewarden.io/vap-migration: enabled
----

======

You can migrate the policy to {short-project-name} by following these steps:

.`kwctl` command for policy migration
[%collapsible]
======

[subs="+attributes",shell]
----
$ kwctl scaffold vap \
    -p vap.yml \
    -b vap-binding.yml
----

======

The command produces output similar to this:

.Output from the migration
[%collapsible]
======

[subs="+attributes",yaml]
----
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: kw-scaffold-demo
spec:
  module: ghcr.io/kubewarden/policies/cel-policy:latest
  settings:
    failurePolicy: Fail
    variables:
      - expression: |
          object.spec.template.spec.containers.filter(c, !has(c.livenessProbe)).map(c, c.name)
        name: containers_without_liveness_probe
    validations:
      - expression: |
          size(variables.containers_without_liveness_probe) == 0
        messageExpression: |
          'These containers are missing a liveness probe: ' + variables.containers_without_liveness_probe.join(' ')
        reason: Invalid
  rules:
    - apiGroups:
        - apps
      apiVersions:
        - v1
      resources:
        - deployments
      operations:
        - CREATE
        - UPDATE
  mutating: false
  namespaceSelector:
    matchLabels:
      docs.kubewarden.io/vap-migration: enabled
----
======

[NOTE]
====

The command warns the user about the usage of the `latest` version of the CEL
policy:

[subs="+attributes",console]
----
024-06-24T16:00:16.516062Z  WARN kwctl::scaffold:
  Using the 'latest' version of the CEL policy could lead to unexpected behavior.
  It is recommended to use a specific version to avoid breaking changes.
----

It's recommended to use a specific version to avoid breaking changes.

You can do this using the `--cel-policy` flag, like this:

[subs="+attributes",console]
----
$ kwctl scaffold vap \
    --cel-policy ghcr.io/kubewarden/policies/cel-policy:v1.0.1 \
    -p vap.yml \
    -b vap-binding.yml
----

====
